# auto-work-harness

./: .gitignore  .pre-commit-config.yaml  ADOPTING.md  LICENSE  Makefile  NEW_PROJECT.md  PLAYBOOK.md  README.md  ROADMAP_MAPPING.md  SESSION_REPORT.md  eval-baseline.json  evolution-log.jsonl  install.sh  pyproject.toml
.awh/: gate.sh  policy.json
.claude/: settings.json
.github/workflows/: ci.yml
examples/: flaky_solver.py  specbench_demo.md
goldenset/: new-project.template.yaml  self.yaml
harness/: __init__.py  adopt.py  cli.py  maturity.py
harness/common/: __init__.py  stats.py
harness/goldenset/tasks/: example_tasks.yaml
harness/stage0_verification/: __init__.py  config.py  egress.py  policy.py  readonly.py  settings.template.json
harness/stage0_verification/hooks/: __init__.py  posttooluse_format.py  pretooluse_deny.py  stop_gate.py
harness/stage1_measurement/: __init__.py  goldenset.py  runner.py
harness/stage1_measurement/promptfoo/: promptfoo_gate.py  promptfooconfig.yaml
harness/stage2_structural/: __init__.py  mutation.py  scorermix.py  verifier.py
harness/stage3_parallel/: __init__.py  pipeline.py  worktree.py
recipes/release-safety/: README.md
sandbox/: README.md
sandbox/devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
sandbox/proxy/: allowlist.txt  credential_proxy.py
sandbox/seatbelt/: agent.sb
scripts/: mutation_demo.py
tests/: test_adopt.py  test_audit_hardening.py  test_cli.py  test_maturity.py  test_stage0_egress.py  test_stage0_hooks.py  test_stage0_policy.py  test_stage0_proxy.py  test_stage0_readonly.py  test_stage1_runner.py  test_stage2_mutation.py  test_stage2_pbt.py  test_stage2_verifier.py  test_stage3_pipeline.py  test_stage3_worktree.py  test_stats.py
(+4 files in other folders)
