[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-work-harness"
version = "0.1.0"
description = "Verification, measurement, and orchestration hardening for autonomous coding agents (implements the Stage 0-3 roadmap)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "CyberSkill" }]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "hypothesis>=6",
  "ruff>=0.6",
  "bandit>=1.7",
]

[project.scripts]
awh = "harness.cli:main"

[tool.setuptools.packages.find]
include = ["harness*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
# E501 (line length) handled by formatter; keep lint focused on correctness.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
# importorskip() must run before the hypothesis import, which trips E402.
"tests/test_stage2_pbt.py" = ["E402"]

[tool.bandit]
# B404/B603/B607: this toolkit's whole job is to orchestrate git / npm / ruff and
# run the operator's gate + test commands via subprocess. Those call sites use
# fixed argv or operator-controlled commands (never agent-controlled input — the
# PreToolUse policy and worktree task_id validation enforce that), so the generic
# "you use subprocess / partial path" findings are reviewed-and-accepted noise.
# The remaining shell=True sites (B604) carry inline `# nosec` with a rationale.
skips = ["B404", "B603", "B607"]
